<resources>
    <string name="app_name">MKANReport</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="error_invalid_email">This email is not valid</string>
    <string name="error_invalid_ip">This IP address is not valid</string>
    <string name="error_invalid_phone_number">This phone number is not valid</string>
    <string name="error_invalid_url">This url is not valid</string>
    <string name="error_invalid_number">This is not a number</string>

    <string name="error_min_length">This field must contain %1$d characters minimum</string>
    <string name="error_max_length">This field can contain %1$d characters maximum</string>
    <string name="error_range_length">This field must contain between %1$d and %2$d characters</string>

    <string name="error_min_value">This field must be greater than %1$d</string>
    <string name="error_max_value">This field must be less than %1$d</string>
    <string name="error_range_value">This field must be between %1$d and %2$d</string>

    <string name="error_invalid_field">This field is not valid</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_fields_mismatch">The two fields mismatch</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="loading">Loading..</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="username">Username</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="dont_have_account">Don\'t have account?</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="birthday">Birthday</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="reset_password">Reset Password</string>
    <string name="login_button_click">Login button clicked</string>
    <string name="signup_button_click">Sign Up button clicked</string>
    <string name="reset_password_button_clicked">Reset Password button clicked</string>
    <string name="empty_username">Empty</string>
    <string name="empty">Empty</string>
    <string name="create_account">Create account</string>
    <string name="ilaqa">Pick Ilaqa</string>
    <string name="pick_dila">Pick Dila</string>
    <string name="pick_muqami">Pick Muqami</string>
    <string name="progress_dialog">Loading</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

</resources>
